# musa-learning-notes

./: .gitignore  LICENSE  README.md
code/: CMakeLists.txt
code/include/: musa_common.h
code/leetgpu/easy/: 01_vector_add.mu  02_matrix_multiplication.mu  03_matrix_transpose.mu  07_color_inversion.mu  08_matrix_addition.mu  09_1d_convolution.mu  19_reverse_array.mu  21_relu.mu  23_leaky_relu.mu  24_rainbow_table.mu  31_matrix_copy.mu  52_silu.mu  54_swiglu.mu  62_value_clipping.mu  63_interleave.mu  65_geglu.mu  66_rgb_to_grayscale.mu  68_sigmoid.mu  CMakeLists.txt  README.md
code/week1/: 01_hello_world.mu  02_thread_index.mu  03_device_info.mu  04_memory_basics.mu  05_error_check.mu  06_async_kernel.mu  CMakeLists.txt  Makefile  README.md  exercises.md
code/week2/: 01_vector_add_runtime.mu  02_vector_add_pinned.mu  03_vector_add_timer.mu  04_vector_add_unified.mu  05_multi_stream.mu  06_stream_event_dep.mu  07_musa_graph.mu  08_stream_callback.mu  CMakeLists.txt  Makefile  README.md  exercises.md
code/week3/: 01_warp_divergence.mu  02_reduce_naive.mu  03_reduce_unrolling.mu  04_reduce_shfl.mu  05_nested_hello.mu  06_sum_matrix_2d.mu  CMakeLists.txt  Makefile  README.md  exercises.md
code/week4/: 01_saxpy_bandwidth.mu  02_offset_access.mu  03_offset_unrolling.mu  04_aos_vs_soa.mu  05_transpose_naive.mu  06_transpose_padded.mu  CMakeLists.txt  Makefile  README.md  exercises.md
code/week5/: 01_shared_basics.mu  02_reduce_shared.mu  03_transpose_shared.mu  04_stencil_constant.mu  05_naive_gemm.mu  06_tiled_gemm.mu  07_mublas_sgemm.mu  CMakeLists.txt  Makefile  README.md  exercises.md
code/week6/: 01_mccl_allreduce.cpp  02_musa_gdb_demo.mu  03_error_dump.mu  04_torch_musa_minimal.py  05_torch_musa_custom_op.cpp  CMakeLists.txt  Makefile  README.md  exercises.md
docs/: concepts.md  cuda-vs-musa.md  glossary.md  leetgpu-easy.md  musa-runtime-api.md  remote-dev.md  roadmap.md  setup.md
docs/articles/: 01-first-musa-code.md  02-stream-graph.md
docs/superpowers/specs/: 2026-05-16-week2-stream-graph-design.md
notes/: troubleshooting.md  week3.md  week4.md  week5.md  week6.md
scripts/: musa.sh
